# nextver

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release+build+publish.yml  release.yml
benches/: format_parse.rs  format_parse_bench.rs  nextver_bench.rs
src/: error.rs  format.rs  lib.rs  main.rs  scheme.rs  specifier.rs  specifier2.rs  version.rs
