[package]
name = "version-bump"
version = "0.1.0"
authors = ["Tim Martin <tim@tim.direct>"]
readme = "README.md"
repository = "https://github.com/t-mart/version-bump"
documentation = "https://docs.rs/version-bump"
homepage = "https://github.com/t-mart/version-bump"
description = "A library for parsing and incrementing arbitrarily-formatted versions."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.17", features = ["derive"] }
regex = "1.10.2"
thiserror = "1.0.56"

[dev-dependencies]
criterion = "0.5.1"
itertools = "0.12.0"
rstest = "0.18.2"

[[bench]]
name = "format_parse_bench"
harness = false
