[package]
name = "nextver"
version = "0.7.3"
authors = ["Tim Martin <tim@tim.direct>"]
readme = "README.md"
repository = "https://github.com/t-mart/nextver"
documentation = "https://docs.rs/nextver"
homepage = "https://github.com/t-mart/nextver"
description = "A library for parsing and incrementing arbitrarily-formatted versions."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.17", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
criterion = "0.5.1"
itertools = "0.12.0"
rstest = "0.18.2"

[lib]
name = "nextver"
path = "src/lib.rs"

[[bin]]
name = "nextver"
path = "src/main.rs"

[[bench]]
name = "nextver_bench"
harness = false

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-fmt = "zip"
